fix(navigation): increase contrast of branding title & its background to improve readability

--- a/src/components/navigation/navigation.scss
+++ b/src/components/navigation/navigation.scss
@@ -64,7 +64,7 @@ header {
         font-size: pxToRem(16);
         font-weight: normal;
         letter-spacing: 0.5ch;
-        color: rgb(var(--kompendium-contrast-800));
+        color: rgb(var(--kompendium-contrast-900));
         flex-grow: 1;
         line-height: 0;
     }
